--- a/SqueezeDet/train_demo.ipynb
+++ b/SqueezeDet/train_demo.ipynb
@@ -110,21 +110,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0acdde02",
+   "id": "7b262d58",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_generator = generator_from_data_path(img_names, gt_names, config=cfg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4cbd7a8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imgs , labs = next(train_generator)"
    ]
   },
   {
@@ -167,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8441d151",
+   "id": "78d0a8de",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "371d4408",
+   "id": "ddf741b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "65b9179f",
+   "id": "9a991dd0",
    "metadata": {},
    "outputs": [
     {
@@ -368,11 +358,10 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6bddbbdf",
+   "id": "f7ab66ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# compile model\n",
     "squeeze.model.compile(optimizer=opt, loss=[squeeze.loss], metrics=[squeeze.loss_without_regularization, squeeze.bbox_loss, squeeze.class_loss, squeeze.conf_loss])"
    ]
@@ -380,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d678fd1",
+   "id": "546e56e4",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +383,19 @@
       "Epoch 3/100\n",
       "1496/1496 [==============================] - 1403s 938ms/step - loss: 3.7332 - loss_without_regularization: 3.6796 - bbox_loss: 2.1345 - class_loss: 0.6230 - conf_loss: 0.9221\n",
       "Epoch 4/100\n",
-      "1027/1496 [===================>..........] - ETA: 7:13 - loss: 3.6442 - loss_without_regularization: 3.6018 - bbox_loss: 2.0877 - class_loss: 0.6193 - conf_loss: 0.8949"
+      "1496/1496 [==============================] - 1393s 931ms/step - loss: 3.6513 - loss_without_regularization: 3.6123 - bbox_loss: 2.0974 - class_loss: 0.6249 - conf_loss: 0.8899\n",
+      "Epoch 5/100\n",
+      "1496/1496 [==============================] - 1408s 941ms/step - loss: 3.6020 - loss_without_regularization: 3.5803 - bbox_loss: 2.1064 - class_loss: 0.6090 - conf_loss: 0.8649\n",
+      "Epoch 6/100\n",
+      "1496/1496 [==============================] - 1359s 909ms/step - loss: 3.5878 - loss_without_regularization: 3.5759 - bbox_loss: 2.1085 - class_loss: 0.6051 - conf_loss: 0.8623\n",
+      "Epoch 7/100\n",
+      "1496/1496 [==============================] - 1440s 963ms/step - loss: 3.5808 - loss_without_regularization: 3.5743 - bbox_loss: 2.1091 - class_loss: 0.6036 - conf_loss: 0.8615\n",
+      "Epoch 8/100\n",
+      "1496/1496 [==============================] - 1351s 903ms/step - loss: 3.5770 - loss_without_regularization: 3.5734 - bbox_loss: 2.1094 - class_loss: 0.6028 - conf_loss: 0.8613\n",
+      "Epoch 9/100\n",
+      "1496/1496 [==============================] - 1411s 943ms/step - loss: 3.5748 - loss_without_regularization: 3.5728 - bbox_loss: 2.1095 - class_loss: 0.6022 - conf_loss: 0.8611\n",
+      "Epoch 10/100\n",
+      "1051/1496 [====================>.........] - ETA: 6:54 - loss: 3.5475 - loss_without_regularization: 3.5463 - bbox_loss: 2.1003 - class_loss: 0.5894 - conf_loss: 0.8567"
      ]
     }
    ],
