--- a/SqueezeDet/train_demo.ipynb
+++ b/SqueezeDet/train_demo.ipynb
@@ -21,6 +21,7 @@
     "from main.config.create_config import load_dict\n",
     "import tensorflow.keras.backend as K\n",
     "import tensorflow as tf\n",
+    "from main.model.modelLoading import load_only_possible_weights\n",
     "from tensorflow.keras.callbacks import TensorBoard, ModelCheckpoint, LearningRateScheduler, ReduceLROnPlateau\n",
     "from tensorflow.keras import optimizers\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,12 +53,14 @@
     "img_file = \"img_train.txt\"\n",
     "gt_file  = \"gt_train.txt\"\n",
     "log_dir_name = './log'\n",
+    "init_file = \"imagenet.h5\"\n",
     "EPOCHS = 100\n",
     "STEPS = None\n",
     "OPTIMIZER = \"default\"\n",
     "REDUCELRONPLATEAU = True\n",
     "VERBOSE = True\n",
     "CONFIG = \"squeeze.config\"\n",
+    "\n",
     "\n",
     "tb_dir = log_dir_name +\"/tensorboard\"\n",
     "\n",
@@ -103,7 +106,7 @@
     "cfg.gt_file = gt_file\n",
     "cfg.images = img_names\n",
     "cfg.gts = gt_names\n",
-    "#cfg.init_file = init_file\n",
+    "cfg.init_file = init_file\n",
     "cfg.EPOCHS = EPOCHS\n",
     "cfg.OPTIMIZER = OPTIMIZER\n",
     "#cfg.CUDA_VISIBLE_DEVICES = CUDA_VISIBLE_DEVICES\n",
@@ -146,6 +149,16 @@
    "source": [
     "# instantiate model\n",
     "squeeze = SqueezeDet(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4279c136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_only_possible_weights(squeeze.model, init_file, verbose=VERBOSE)"
    ]
   },
   {
@@ -235,15 +248,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+    "# To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
     "\n",
     "# tf.autograph.experimental.do_not_convert(\n",
-    "#     squeeze.model.fit_generator(train_generator, \n",
-    "#                                 epochs=EPOCHS, \n",
-    "#                                 steps_per_epoch=nbatches_train, \n",
-    "#                                 callbacks=cb\n",
-    "#     )\n",
-    "# )"
+    "\n",
+    "# )\n",
+    "\n",
+    "@tf.autograph.experimental.do_not_convert\n",
+    "def train():\n",
+    "    squeeze.model.fit_generator(train_generator, \n",
+    "                            epochs=EPOCHS, \n",
+    "                            steps_per_epoch=nbatches_train, \n",
+    "                            callbacks=cb\n",
+    "    )\n",
+    "    \n",
+    "train()"
    ]
   },
   {
